# random-bool

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  multithread.txt  singlethread.txt
src/: benchmark_multithread.cpp  benchmark_singlethread.cpp  bit_gen.hpp  concurrent_bits.cpp  concurrent_prng.hpp  main.cpp  prng.hpp  rand_bool.hpp  random_bool.hpp  random_bool_concurrent.hpp
